[project]
name = "rl-example-nat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.8.0",
    "sb3-contrib>=2.8.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.0",
]
